# scraper

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  scraper_project_instructions.md
src/scraper/: __init__.py  auth.py  cli.py  crawler.py  saver.py  utils.py
