[project]
name = "scraper"
version = "0.1.0"
description = "Authenticated website offline mirror built with Playwright"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "playwright>=1.49.0",
  "typer>=0.12.5",
  "rich>=13.9.4",
  "beautifulsoup4>=4.12.3",
]

[project.scripts]
scraper = "scraper.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
